2006-09-26  Jakub Steiner <jimmac@ximian.com>

	* 24x24/mimetypes/x-office-document.png: fix for #357685

2006-09-26  Jakub Steiner <jimmac@ximian.com>

	* 32x32/devices/audio-input-microphone: add the missing size

2006-09-26  Jakub Steiner <jimmac@ximian.com>

	* apps/preferences-desktop-accessibility.png: touch up at 16x16 
	* apps/preferences-desktop-screensaver.png: was exported onto grey
		background
	* apps/multimedia-volume-control.png: lighten up, add 22x22
		version

2006-09-25  Jakub Steiner <jimmac@ximian.com>

	* drive-harddisk: make it slimmer

2006-09-25  Jakub Steiner <jimmac@ximian.com>

	* drive-removable-media: mainly contribution by Lapo again.

2006-09-25  Jakub Steiner <jimmac@ximian.com>

	* document-open: another one by Lapo

2006-09-22  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/accessories-dictionary.png: #357139
	* 24x24/apps/applets-screenshooter.png: #357140

2006-09-16  Jakub Steiner <jimmac@ximian.com>

	* drive-harddisk: yet more touchups based on a concept by 
	  Gareth Murphy

2006-09-14  Jakub Steiner <jimmac@ximian.com>

	* applications-multimedia: based on work by Lapo Calamandrei

2006-09-14  Jakub Steiner <jimmac@ximian.com>

	* {22x22,24x24}/apps/utilities-terminal*: shift down by pixel.
		fixes bug #355818

2006-09-12  Jakub Steiner <jimmac@ximian.com>

	* drive-harddisk:
	* drive-optical: had a session with Lapo to spiff up the device
		icons a little. More to come.

2006-09-12  Jakub Steiner <jimmac@ximian.com>

	* contact-new: another contribution by Lapo Calamandrei

2006-09-12  Jakub Steiner <jimmac@ximian.com>

	* 16x16/devices/media-floppy.png:
	* 16x16/actions/document-save*: update floppy colors

2006-09-08  Jakub Steiner <jimmac@ximian.com>

	* */apps/preferences-system-windows: smokin'

2006-09-08  Jakub Steiner <jimmac@ximian.com>

	* */apps/preferences-desktop-keyboard-shortcuts*:
	* */apps/preferences-desktop-theme*:
	* */apps/preferences-desktop-remote-desktop*: more from Lapo