@@ -1,3 +1,7 @@
+2006-09-28  Jakub Steiner <jimmac@ximian.com>
+
+	* modem: awesome artwork by ulisse & lapo
+
 2006-09-26  Jakub Steiner <jimmac@ximian.com>
 
 	* 24x24/mimetypes/x-office-document.png: fix for #357685
